# 2nd_CA

./: .env.example  .gitignore  404.html  LICENSE  Makefile  README.md  aerotax-45e482ccd1f3fd65_bg.wasm  aerotax-71a4084b3669a050_bg.wasm  aerotax-9c0226660051c58d.js  aerotax-9c0226660051c58d_bg.wasm  aerotax-c6e253e638e3b584.js  aerotax-c6e253e638e3b584_bg.wasm  aerotax-deb4b737022f7986.js  aerotax-deb4b737022f7986_bg.wasm  aerotax-e80e50564bc5342e_bg.wasm  aerotax-f748c75014837f8d.css  index.html  render.yaml
.github/workflows/: gh-pages.yml
backend/: main.py  requirements.txt
engine/: engine.c  engine_py.py
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/components/: audit_stream.rs  dashboard.rs  mod.rs  nav_bar.rs  news_cloud.rs  upload_zone.rs
frontend/styles/: aerotax.css
legacy/: app.py  index.html  requirements.txt
